--- a/content/resources/4-001js07-th.md
+++ b/content/resources/4-001js07-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/4-001j-cityscope-new-orleans-spring-2007/884554cde18f56b10e8bb01f064e3af4_4-001js07-th.jpg
+file: /courses/4-001j-cityscope-new-orleans-spring-2007/884554cde18f56b10e8bb01f064e3af4_4-001js07-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof. John
@@ -14,3 +14,5 @@ resourcetype: Image
 title: 4-001js07-th.jpg
 uid: 884554cd-e18f-56b1-0e8b-b01f064e3af4
 ---
+New image Upload
+
