--- a/content/resources/4-001js07.md
+++ b/content/resources/4-001js07.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof.
   John Fernandez.)
-file: /media/courses/4-001j-cityscope-new-orleans-spring-2007/8b2090c1632cbc606c0a3d5b3a838d90_4-001js07.jpg
+file: /courses/4-001j-cityscope-new-orleans-spring-2007/8b2090c1632cbc606c0a3d5b3a838d90_4-001js07.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof. John
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 4-001js07.jpg
 uid: 8b2090c1-632c-bc60-6c0a-3d5b3a838d90
 ---
+Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof. John Fernandez.)
+
