Sync all content

--- a/content/resources/4-001js07-th.md
+++ b/content/resources/4-001js07-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Photograph of a destroyed house.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 4-001js07-th.jpg
 uid: 884554cd-e18f-56b1-0e8b-b01f064e3af4
 ---
 New image Upload
-
