--- a/content/resources/4-001js07.md
+++ b/content/resources/4-001js07.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Photograph of a destroyed house.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 4-001js07.jpg
 uid: 8b2090c1-632c-bc60-6c0a-3d5b3a838d90
 ---
 Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof. John Fernandez.)
-
