Sync all content

--- a/content/resources/4-001js07.md
+++ b/content/resources/4-001js07.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof.
   John Fernandez.)
 file: /courses/4-001j-cityscope-new-orleans-spring-2007/8b2090c1632cbc606c0a3d5b3a838d90_4-001js07.jpg
+file_size: 60581
 file_type: image/jpeg
 image_metadata:
   caption: Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof. John
