--- a/content/resources/4-001js07-th.md
+++ b/content/resources/4-001js07-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/4-001j-cityscope-new-orleans-spring-2007/884554cde18f56b10e8bb01f064e3af4_4-001js07-th.jpg
+file_size: 8662
 file_type: image/jpeg
 image_metadata:
   caption: Destroyed house in the Lower Ninth Ward, New Orleans. (Image by Prof. John
